# grant-review-env

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test.py
environment/: applicant.py  env.py  models.py
environment/graders/: easy.py  hard.py  medium.py
server/: app.py
tasks/: task_easy.json  task_hard.json  task_medium.json
